# skillport

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DOCKER_MCP.md  Dockerfile.mcp  README.md  pyproject.toml  verify_server.py
.agent/skills/algorithmic-art/: SKILL.md
.agent/skills/brand-guidelines/: SKILL.md
.agent/skills/canvas-design/: SKILL.md
.agent/skills/claude-code/claude-opus-4-5-migration/: SKILL.md
.agent/skills/document-skills/docx/: SKILL.md
.agent/skills/document-skills/pdf/: SKILL.md
.agent/skills/document-skills/pptx/: SKILL.md
.agent/skills/document-skills/xlsx/: SKILL.md
.agent/skills/frontend-design/: SKILL.md
.agent/skills/hello-world/: SKILL.md
.agent/skills/internal-comms/: SKILL.md
.agent/skills/mcp-builder/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
.agent/skills/slack-gif-creator/: SKILL.md
.agent/skills/template-skill/: SKILL.md
.agent/skills/theme-factory/: SKILL.md
.agent/skills/web-artifacts-builder/: SKILL.md
.agent/skills/webapp-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
.skills/experimental/git-branch-cleanup/: SKILL.md
docs/: AGENTS.md
docs/latest/: PLAN.md  PRD.md  SEARCH_ALGORITHM.md  STABILITY.md  TEST_PLAN.md
docs/latest/tasks/: AGENTS.md
docs/releases/v0.0.0/: PLAN.md  PRD.md
docs/releases/v0.0.1/: EXECUTION_ENV.md  SKILL_PHILOSOPHY.md
docs/steering/: CONTRIBUTING.md  ENGINEERING_GUIDE.md  OPERATING_MODEL.md  RUNBOOK.md  TESTING_CHARTER.md  VERSIONING.md  VERSIONING_TEMPLATE.md
docs/v0.0.0/: PLAN.md  PRD.md  SEARCH_ALGORITHM.md
guide/: cli.md  configuration.md  creating-skills.md  philosophy.md
scripts/: build-mcp-docker.sh
src/skillhub_mcp/: cli.py  config.py  db.py  server.py  utils.py
src/skillhub_mcp/db/: __init__.py  embeddings.py  models.py  search.py  search_service.py  state.py
src/skillhub_mcp/skill_manager/: add.py  origin.py
src/skillhub_mcp/tools/: discovery.py  execution.py  loading.py
src/skillpod/: __main__.py
src/skillpod/interfaces/cli/commands/: add.py  lint.py
src/skillpod/modules/indexing/internal/: lancedb.py
src/skillpod/modules/skills/internal/: github.py  validation.py
src/skillpod/modules/skills/public/: add.py  types.py  validation.py
src/skillpod/shared/: config.py
src/skillport/interfaces/cli/: app.py  auto_index.py  config.py  theme.py
src/skillport/interfaces/cli/commands/: add.py  doc.py  init.py  lint.py  list.py  remove.py  search.py  serve.py  show.py  sync.py  update.py  validate.py
src/skillport/modules/indexing/internal/: embeddings.py  lancedb.py  models.py  search_service.py  state.py
src/skillport/modules/indexing/public/: index.py  query.py
src/skillport/modules/skills/internal/: __init__.py  github.py  manager.py  origin.py  validation.py  zip_handler.py
src/skillport/modules/skills/public/: add.py  list.py  load.py  read.py  remove.py  search.py  types.py  update.py
src/skillport/shared/: config.py  filters.py  types.py
src/skillport_cli/: __init__.py
src/skillsouko/interfaces/cli/: app.py
src/skillsouko/interfaces/mcp/: instructions.py  server.py  tools.py
src/skillsouko/modules/indexing/: __init__.py
src/skillsouko/shared/: config.py
tests/integration/: conftest.py  test_cli_commands.py  test_cli_meta_commands.py  test_mcp_server.py  test_search_and_tools_integration.py
tests/pbt/: test_name_properties.py
tests/unit/: test_add_logic.py  test_add_namespace.py  test_add_skill_cleanup.py  test_config.py  test_core_skills_mode.py  test_dependency_boundaries.py  test_doc.py  test_github_source.py  test_index_state.py  test_init_command.py  test_meta_frontmatter_format.py  test_normalization_and_threshold.py  test_origin.py  test_origin_v2.py  test_project_config.py  test_settings_fail_fast.py  test_sync.py  test_transport_mode.py  test_update.py  test_validation_rules.py  test_xml_instructions.py  test_zip_handler.py
(+5 files in other folders)
