[project]
name = "skillhub-mcp"
version = "0.1.0"
description = "MCP server for Agent Skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.0.1",
    "lancedb>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tantivy>=0.20.0", # Often needed for lancedb FTS
    "google-genai>=1.52.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.148.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning:google.genai.types",
]

[project.scripts]
skillhub-mcp = "skillhub_mcp.server:main"
skillhub = "skillhub_mcp.server:main"

[tool.ruff]
exclude = [
    ".agent/skills",
    "test_lancedb_scores",
    "test_verification_db",
]
