[project]
name = "skillport"
version = "0.1.0"
description = "Bring Agent Skills to Cursor / Copilot / Codex & more — via CLI or MCP. Manage once, serve anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gota" }]
keywords = [
    "agent-skills", "claude-skills", 
    "mcp", "model-context-protocol", "mcp-server",
    "cursor", "copilot", "codex", "claude-code",
    "ai-agent", "context-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=0.0.1",
    "lancedb>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tantivy>=0.20.0",
    "requests>=2.32.0",
    "typer>=0.12.5",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.148.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning:google.genai.types",
]

[project.urls]
Homepage = "https://github.com/gotalab/skillport"
Repository = "https://github.com/gotalab/skillport"

[project.scripts]
skillport = "skillport.__main__:main"
skillport-mcp = "skillport.__main__:main"  # legacy alias

[tool.ruff]
exclude = [
    ".agent/skills",
    "test_lancedb_scores",
    "test_verification_db",
]
